[package]
name = "replicate"
version = "0.0.0"
edition = "2024"
authors = ["Max Dymond <cmeister2@gmail.com>"]
description = "Copies the currently running program into a temporary location"
license = "MIT"
repository = "https://github.com/cmeister2/replicate"
rust-version = "1.85"
keywords = ["copy"]
categories = ["development-tools"]

[dependencies]
tempfile = "3.20.0"

[dev-dependencies]
anyhow = "=1.0.102"
